# NEXUS-AI

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  claude.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: HITLReview.tsx  KbView.tsx  PipelineProgress.tsx  QueryForm.tsx  ReportView.tsx
nexus/: __init__.py  logging_config.py
nexus/agents/: __init__.py  analysis_agent.py  factcheck_agent.py  kb_builder_agent.py  research_agent.py  supervisor.py
nexus/api/: __init__.py  dependencies.py  main.py
nexus/api/routers/: __init__.py  kb.py  reports.py  research.py
nexus/evaluation/: golden_dataset.py  ragas_eval.py
nexus/rag/: __init__.py  chunker.py  embedder.py  hyde.py  retriever.py
nexus/schemas/: __init__.py  config.py  report.py  state.py
nexus/tests/: __init__.py
nexus/tests/integration/: __init__.py
nexus/tests/unit/: __init__.py  test_analysis_agent.py  test_chunker.py  test_factcheck_agent.py  test_hyde.py  test_ragas_eval.py  test_research_agent.py  test_retriever.py  test_state.py  test_supervisor.py
nexus/utils/: progress.py
nexus/workers/: tasks.py
