[project]
name = "nexus"
version = "0.1.0"
description = "Autonomous Multi-Agent Competitive Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.60.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "instructor>=1.7.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "qdrant-client>=1.17.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "cohere>=5.13.0",
    "fastembed>=0.4.0",
    "guardrails-ai>=0.5.0",
    "langfuse>=4.0.0",
    "ragas>=0.4.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.4.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "langgraph-checkpoint-redis>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["nexus/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
